--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <!-- font-family: 'Space Grotesk', sans-serif; -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Sandbox</title>
   </head>
   <body>
     <div id="root"></div>
