--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+      rel="stylesheet"
+    />
+
     <!-- font-family: 'Space Grotesk', sans-serif; -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sandbox</title>
